deployments/fastapi/fastapi-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: fastapi
  labels:
    name: fastapi
