deployments/fastapi/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: fastapi
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - image: ghcr.io/wmramadan/fastapi-boilerplate:latest
          name: fastapi
          ports:
            - containerPort: 80
