deployments/fastapi/fastapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: fastapi
  labels:
    app: fastapi
spec:
  type: NodePort
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
